--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
+@import url(https://fonts.googleapis.com/css?family=Radio+Canada+Big:regular,500,600,700,italic,500italic,600italic,700italic);
+
 .App {
   text-align: center;
+  font-family: 'Roboto';
 }
 .wrapper{
   background-color: #112d49;
-  max-width: 1000px;
+  display: inline-block;
   margin: 20px auto;
-  padding: 25px;
+  padding: 20px 30px;
   border-radius: 1em;
   color: aliceblue;
-  box-shadow: 5px 5px 5px #000;
+  box-shadow: 7px 7px 5px #000000e7;
+  border: .5px solid #9cd4042d;
 }
 h1{
+  font-family: 'Radio+Canada+Big';
   font-size: 50px;
   margin-bottom: 20px;
+  color:cadetblue;
+  text-shadow: 2px 2px 1px green, 5px 5px 5px #000;
 }
